# insight

./: AUTHORS  Doxyfile.in  Makefile.am  Makefile.in  TODO  aclocal.m4  config.h.in  configure  configure.ac  libtool
src/: Makefile.am  Makefile.in  bplus.c  bplus.h  bplus_debug.h  bplus_priv.h  debug.h  insight.c  insight.h  insight_consts.h  insight_log.c  insight_log.h  insight_plugin.h  path_helpers.c  path_helpers.h  plugin_handler.c  plugin_handler.h  query_engine.c  query_engine.h  set_ops.c  set_ops.h  string_helpers.c  string_helpers.h
src/plugins/: auto_ext.c  auto_group.c  auto_mp3.c  auto_owner.c
test/: Makefile.am  bits_test  bits_test.c  bplus-inodes  check_bplus.c  check_setops.c
test/bplus/: bplus-tests.c
test/other/: bplus-inodes.c
test/other/bplus/: Makefile  bplus-tests.c
