bin_PROGRAMS=insight
insight_SOURCES=insight.c \
                query_engine.c \
                query_engine.h \
                string_helpers.c \
                string_helpers.h \
                path_helpers.c \
                path_helpers.h \
                debug.h \
								bplus_debug.h \
								bplus.c \
                bplus.h \
								bplus_priv.h \
                insight.h
